--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -15,10 +15,13 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '20'  # Cambia la versión según tus necesidades
+          node-version: '14'  # Cambia la versión según tus necesidades
 
       - name: Install dependencies
         run: npm install
+        working-directory: scripts  # Ajusta la carpeta si es necesario
 
       - name: Run server.js
-        run: node scripts/server.js  # Aquí especifica la ruta correcta a tu archivo server.js
+        run: node server.js  # Ajusta la ruta si es necesario
+
+      # Opcional: Puedes agregar pasos adicionales según sea necesario
